# rstar_geodetic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  justfile
.github/: dependabot.yml
.github/workflows/: test.yml  wheels.yml
benches/: geodetic.rs  geodetic_extent.rs  geodetic_wgs84.rs
examples/c/: smoke.c
include/: rstar_geodetic.h
python/: Cargo.toml  README.md  pyproject.toml
python/benchmarks/: bench.py
python/python/rstar_geodetic/: __init__.py  _rstar_geodetic.pyi
python/python/rtree_geodetic/: __init__.py
python/src/: error.rs  geo_interface.rs  geometry.rs  lib.rs  tree.rs
python/tests/: test_geo_interface.py  test_geopandas.py  test_shapely.py  test_trees.py
src/: lib.rs
src/ffi/: construct.rs  error.rs  mod.rs  query.rs
src/geodetic/: arc.rs  coord.rs  distance.rs  embedding.rs  geo_types_compat.rs  linestring.rs  mod.rs  point.rs  polygon.rs  spheroid.rs  tree.rs
tests/: geodetic_arc_property.rs  geodetic_embedding_property.rs  geodetic_extent_property.rs  geodetic_rtree.rs  geodetic_tree_property.rs  geodetic_wgs84_stress.rs
tests/geodetic_common/: mod.rs
tests/reference/: arc_distance_reference.py
