[workspace]
members = [".", "python"]
# The Python extension crate is built through maturin, not as part of a plain workspace
# build. Keeping it out of the default set means `cargo build`/`test`, the no_std
# `--target aarch64-unknown-none` build, and the MSRV build all operate on the root crate
# only; the Python crate is still reached by `cargo clippy --workspace` and by maturin.
default-members = ["."]
resolver = "3"

[package]
name = "rstar_geodetic"
version = "0.1.0"
authors = [
    "Stephan Hügel <urschrei@gmail.com>",
]
description = "A geodetic R-tree built on rstar, with great-circle distance queries"
documentation = "https://docs.rs/rstar_geodetic/"
repository = "https://github.com/urschrei/rstar_geodetic"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
keywords = ["rtree", "geodetic", "spatial", "geo", "nearest-neighbor"]
categories = ["data-structures", "science::geo"]

[dependencies]
rstar = "0.13"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
# Robust adaptive geometric predicates (orient3d) for the polygon point-in-polygon
# sign tests. Forced into no_std mode so the crate builds for a no_std target; no_std
# robust compiles fine under std too.
robust = { version = "1", default-features = false, features = ["no_std"] }
# WGS84 geodesic (Karney) distances for the `wgs84` refine. It is a `std` crate (it
# calls the inherent `f64` math methods), so it is gated behind the `wgs84` feature,
# keeping the base crate no_std. `default-features = false` drops its `accurate`
# summation feature, matching rust-geo's use.
geographiclib-rs = { version = "0.2", optional = true, default-features = false }
# Conversions to and from `geo-types` geometries, on by default. `default-features =
# false` selects its no_std mode so the base crate stays no_std even with this feature
# enabled.
geo-types = { version = "0.7", optional = true, default-features = false }

[features]
default = ["geo-types"]
# Opts the crate into `std`. Internal enabler for `ffi` (which needs `std::panic` and
# raw-pointer heap handoff); not something a downstream user of the index needs directly.
# The base crate stays no_std unless this (transitively via `ffi`) is enabled.
std = []
# A C-ABI surface (opaque handles, status codes) over the point, linestring, and polygon
# trees, built as a cdylib/staticlib with `cargo rustc`. Requires `std`; off by default so
# the base crate stays no_std.
ffi = ["std"]
# Spheroidal (WGS84) geodesic refine for the point tree, layered on the spherical
# index. Pulls in `geographiclib-rs` and so requires `std`; the base crate stays
# no_std.
wgs84 = ["dep:geographiclib-rs"]
# `From`/`TryFrom` conversions between the geodetic geometries and `geo-types`. Enabled
# by default; disable with `default-features = false` to drop the `geo-types` dependency.
geo-types = ["dep:geo-types"]

[dev-dependencies]
approx = "0.5"
rand = "0.10"
rand_hc = "0.5"
hegeltest = "0.14.11"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "geodetic"
harness = false

[[bench]]
name = "geodetic_extent"
harness = false

[[bench]]
name = "geodetic_wgs84"
harness = false
required-features = ["wgs84"]
